--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #c3cbdb;  
 }
 
 .App-logo {
@@ -36,3 +37,23 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+
+
+/* .cards__header {
+  display: flex;
+}
+
+.cards__main-video {
+  display: flex;
+}
+
+
+.bottom__row {
+  background-color:  #3b74ad;
+  box-shadow: 5px 10px 18px #1bd6e4;
+  height: 2rem;
+  margin-top: 1rem;
+} */
