working on routes and props - need to add a redirect after submission callback

--- a/client/src/components/MainTwo/MainTwo.scss
+++ b/client/src/components/MainTwo/MainTwo.scss
@@ -10,7 +10,7 @@
     background-color:  #7699bd;
     box-shadow: 5px 10px 18px #3b74ad;
     border-radius: 1rem;
-    
+    height: 50rem;
     width: 35rem;
     
   
