--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,9 +1,13 @@
 
-
-
 .header {
     height: 8rem;
     width: 100%;
     background-color: #3b74ad;   
     
+    &__logo {
+        height: 8rem;
+        width: 10rem;
+        display: flex;
+
+    }
 }
