--- a/client/src/components/VideoPlayer/VideoItem.scss
+++ b/client/src/components/VideoPlayer/VideoItem.scss
@@ -25,13 +25,13 @@
     &__player {
         height: 20rem;
         width: 35rem;
-        background-image: url('../../assets/tv-frame.png');
+        background-image: url('../../assets/tv-frame-2.png');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
         margin-left: auto;
         margin-right: auto;
-        margin-top: 1rem;
+        margin-top: .5rem;
         border-radius: 10px;
     }
 
@@ -49,12 +49,13 @@
         display: flex;
         justify-content: center;
         margin-left: 15rem;
-        background-image: url('../../assets/tv-frame.png');
+        background-image: url('../../assets/tv-frame-2.png');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;        
         margin-left: auto;
         margin-right: auto;
+        margin-top: .5rem;
         border-radius: 10px;
     }
 
