added discogs APIgit add -Agit add -A

--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,9 +1,10 @@
 
 
-.header {
+.footer {
     height: 8rem;
     width: 100%;
     background-color: #3b74ad;
+    margin-top: 1rem;
 
     &__tagline {
         z-index: 9999;
