--- a/client/src/components/MainTwo/MainTwo.scss
+++ b/client/src/components/MainTwo/MainTwo.scss
@@ -10,27 +10,32 @@
     background-color:  #7699bd;
     box-shadow: 5px 10px 18px #3b74ad;
     border-radius: 1rem;
-    height: 50rem;
+    height: 70rem;
     width: 35rem;
     
   
   }
+
+  .card__wrapper-two {
+    margin-top: 0;
+  }
+
   .card__two {
-    background-color:  #7699bd;
+    background-color:  #9abadb;
     box-shadow: 5px 10px 18px #3b74ad;
     border-radius: 1rem;
+    height: 35rem;
+    width: 55rem;
     
-    width: 35rem;
   
   }
   
   .card__three {
-    background-color:  #7699bd;
+    background-color:  #9abadb;
     box-shadow: 5px 10px 18px #3b74ad;
     border-radius: 1rem;
-    
-    width: 33rem;
-  
+    height: 35rem;
+    width: 55rem;
   }
 
   
