--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -43,4 +43,13 @@
         margin-top: 2rem;
         margin-right: 1rem;
     }
+
+    &__facebook {
+        width: 2.5rem;
+        height: 2.5rem; 
+        border-radius: 20%;
+        background-color: #295581;
+        margin-top: 2.5rem;
+        margin-right: 1rem;
+    }
 }
