--- a/client/src/components/Main/Main.scss
+++ b/client/src/components/Main/Main.scss
@@ -14,6 +14,7 @@
         width: 30rem;
         font-size: 1.5rem;
         margin-top: 3rem;
+        margin-bottom: 8.95rem;
         border-radius: 1rem;
         border: solid #3b74ad;
         box-shadow: 5px 10px 18px #888888;
