lots of style updates and connected some more data from the API

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,10 @@
+@import './partials/_fonts.scss';
+
 .App {
   text-align: center;
-  background-color: #c3cbdb;  
+  background-color: #c3cbdb; 
+  font-family: "Guaraldo"; 
+  
 }
 
 .App-logo {
