updated API for better endpoint results - got releases section to include thumb

--- a/client/src/components/MainTwo/MainTwo.scss
+++ b/client/src/components/MainTwo/MainTwo.scss
@@ -50,6 +50,7 @@
     border: none;
     margin-top: 1rem;
     margin-right: 1rem;
+    
   }
 
   .card__four {
@@ -77,7 +78,7 @@
     border: none;
     margin-top: 1rem; 
     margin-right: 1rem;
-    
+    overflow-y: scroll;
     
     
   }
