--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -3,7 +3,7 @@
 .footer {
     height: 8rem;
     width: 100%;
-    background-color: #3b74ad;
+    background-color: #222930;
     margin-top: 1rem;
 
     &__tagline {
