--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -3,12 +3,20 @@
 .header {
     height: 8rem;
     width: 100%;
-    background-color: #3b74ad;   
+    background-color: #222930;   
     display: flex;
     justify-content: space-between;
 
     &__right {
         display: flex;
+    }
+
+    &__middle {
+        display: flex;
+        margin-left: 12rem;
+        width: 10rem;
+        justify-content: space-between;
+
     }
     
     &__logo {
@@ -33,7 +41,7 @@
         font-size: 2rem;
         margin-top: 3rem;
         margin-right: 1rem;
-        color: #0f1a25;
+        color: #5d7996;
     }
 
     &__band-image {
@@ -50,6 +58,6 @@
         border-radius: 20%;
         background-color: #295581;
         margin-top: 2.5rem;
-        margin-right: 1rem;
+        margin-right: 3rem;
     }
 }
