--- a/client/src/components/MainTwo/MainTwo.scss
+++ b/client/src/components/MainTwo/MainTwo.scss
@@ -7,12 +7,13 @@
 }
   
   .card__one {
-    background-color:  #7699bd;
+    background-color:  #222930;
     box-shadow: 5px 10px 18px #3b74ad;
     border-radius: 1rem;
     height: 71rem;
     width: 35rem;
     margin-top: .5rem;
+
     
     
   
@@ -25,7 +26,7 @@
   }
 
   .card__two {
-    background-color:  #9abadb;
+    background-color:  #222930;;
     box-shadow: 5px 10px 18px #3b74ad;
     border-radius: 1rem;
     border: none;
@@ -36,13 +37,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    
+    color: white;
+    overflow-y: auto;
     
   
   }
   
   .card__three {
-    background-color:  #9abadb;
+    background-color:  #222930;
     box-shadow: 5px 10px 18px #3b74ad;
     border-radius: 1rem;
     height: 35rem;
@@ -50,18 +52,21 @@
     border: none;
     margin-top: 1rem;
     margin-right: 1rem;
-    
+    color: white;
+    overflow-y: auto;
   }
 
   .card__four {
-    background-color:  #b5c9dd;
+    background-color:  #222930;
     box-shadow: 5px 10px 18px #3b74ad;
     border-radius: 1rem;
     height: 35rem;
     width: 16rem;
     border: none;
     margin-top: .5rem;
-    
+    margin-bottom: 0;
+    color: white;
+    font-size: .75rem;
     
   }
 
@@ -70,7 +75,7 @@
     flex-direction: row;
   }
   .card__five {
-    background-color:  #b5c9dd;
+    background-color:  #222930;
     box-shadow: 5px 10px 18px #3b74ad;
     border-radius: 1rem;
     height: 35rem;
@@ -78,10 +83,54 @@
     border: none;
     margin-top: 1rem; 
     margin-right: 1rem;
-    overflow-y: scroll;
+    overflow-y: auto;
+    color: white;
+    
     
     
   }
+
+  .card__wrapper-four {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card__six {
+    background-color:  #222930;
+    box-shadow: 5px 10px 18px #3b74ad;
+    border-radius: 1rem;
+    height: 35rem;
+    width: 16rem;
+    border: none;
+    margin-top: 1rem;
+   
+    color: white;
+    font-size: .75rem;
+    overflow-y: auto;
+    
+  }
+
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #222930; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #334c64; 
+}
 
   .hero{
     
@@ -132,6 +181,7 @@
       text-align: left;
       font-size: 1rem;
       margin-top: .5rem;
+      margin-left: .5rem;
       
     }
 
@@ -143,6 +193,13 @@
     &__member-name {
       margin: auto;
       text-align: left;
+    }
+  }
+
+  .releases {
+
+    &__header {
+      font-size:1.1rem;
     }
   }
   
