--- a/client/src/components/VideoPlayer/VideoItem.scss
+++ b/client/src/components/VideoPlayer/VideoItem.scss
@@ -25,6 +25,7 @@
         font-size: .75rem;
         width: 70%;
         margin-left: 1.75rem;
+        color: whitesmoke;
     }
 
     &__player {
