fixed redirect and updated some styling

--- a/client/src/components/VideoPlayer/VideoItem.scss
+++ b/client/src/components/VideoPlayer/VideoItem.scss
@@ -26,6 +26,7 @@
         width: 70%;
         margin-left: 1.75rem;
         color: whitesmoke;
+        margin-top: .5rem;
     }
 
     &__player {
