added sidemenu and connected to login (somewhat)

--- a/client/src/components/MainTwo/MainTwo.scss
+++ b/client/src/components/MainTwo/MainTwo.scss
@@ -204,6 +204,15 @@
       font-size:1.1rem;
     }
   }
+
+  .navbar-absolute {
+    position: absolute;
+  }
+
+  .header-absolute {
+    position: absolute; 
+    top: 0;  
+  }
   
 
   
