set up nav menu and adjusted many styles and functions

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,7 +1,7 @@
 @import '../../partials/fonts';
 
 .header {
-    height: 8rem;
+    height: 4rem;
     width: 100%;
     background-color: #222930;   
     display: flex;
@@ -9,6 +9,8 @@
 
     &__right {
         display: flex;
+        margin-left: 0;
+        width: 20%;
     }
 
     &__middle {
@@ -38,9 +40,9 @@
 
     &__band {
         font-family: "Guaraldo";
-        font-size: 2rem;
+        font-size: .5rem;
         margin-top: 3rem;
-        margin-right: 1rem;
+       
         color: #5d7996;
     }
 
@@ -50,6 +52,7 @@
         height: 3.5rem;
         margin-top: 2rem;
         margin-right: 1rem;
+        margin-left: 2rem;
     }
 
     &__facebook {
@@ -58,6 +61,7 @@
         border-radius: 20%;
         background-color: #295581;
         margin-top: 2.5rem;
-        margin-right: 3rem;
+        margin-right: 1rem;
+        margin-left: 4rem;
     }
 }
