--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,8 @@
 
 .App {
   text-align: center;
-  background-color: #c3cbdb; 
+  background-color: #c3cbdb;
+  height: 100vh 
   
   
 }
@@ -43,21 +44,12 @@
 }
 
 
-
-
-
-/* .cards__header {
-  display: flex;
-}
-
-.cards__main-video {
-  display: flex;
+.footer__main {
+  position: absolute; 
+  bottom: 0; 
+  width: 100%
 }
 
 
-.bottom__row {
-  background-color:  #3b74ad;
-  box-shadow: 5px 10px 18px #1bd6e4;
-  height: 2rem;
-  margin-top: 1rem;
-} */
+
+
