--- a/client/src/components/Main/Main.scss
+++ b/client/src/components/Main/Main.scss
@@ -5,7 +5,10 @@
     &__logo {
         border-bottom-left-radius: 10rem;
         border-bottom-right-radius: 10rem;
-        box-shadow: 5px 10px 9px #888888;
+        box-shadow: 1px 8px 15px #888888;
+        position: absolute;
+        top: 0;
+        right: 24%;
         
     }
 
@@ -13,8 +16,8 @@
         padding: 2rem 10rem 2rem 12rem;
         width: 30rem;
         font-size: 1.5rem;
-        margin-top: 6.5rem;
-        margin-bottom: 9.8rem;
+        margin-top: 37.5rem;
+        margin-bottom: 5.8rem;
         border-radius: 1rem;
         border: solid #3b74ad;
         box-shadow: 5px 10px 18px #888888;
