--- a/client/src/components/SideBar/Navbar.scss
+++ b/client/src/components/SideBar/Navbar.scss
@@ -13,7 +13,7 @@
   }
   
   .nav-menu {
-    background-color: #222930;
+    background-color: #252d35;
     width: 250px;
     height: 100vh;
     display: flex;
@@ -51,7 +51,7 @@
   }
   
   .nav-text a:hover {
-    background-color: #1a83ff;
+    background-color: #3b74ad;
   }
   
   .nav-menu-items {
@@ -59,7 +59,7 @@
   }
   
   .navbar-toggle {
-    background-color: #222930;
+    background-color: #252d35;
     width: 100%;
     height: 80px;
     display: flex;
@@ -76,3 +76,56 @@
     justify-content: space-evenly;
     background-color: #222930;
   }
+
+  .current-nav-user {
+    position: absolute;
+    left: 1rem;
+    margin-top: 1rem;
+    box-shadow: 5px 10px 18px #888888;
+    border-radius: .25rem;
+    text-decoration: none;
+    background-color: #222930;
+    color: white;
+    width: 5%;
+    height: 2.5%
+    
+  }
+
+  .current-nav-user-two {
+    position: absolute;
+    left: 7.4rem;
+    margin-top: 1rem;
+    box-shadow: 5px 10px 18px #888888;
+    border-radius: .25rem;
+    text-decoration: none;
+    background-color: #222930;
+    color: white;
+    width: 5%;
+    height: 2.5%
+  
+    
+    
+  }
+
+  .current-nav-user-two:hover, .current-nav-user:hover {
+    background-color: #3b74ad;
+  }
+
+  .logo-transparent {
+    position: absolute;
+    top: -4.75rem;
+    right: 44rem;    
+    height: 25%;
+    width: 25%;
+  }
+
+  .header__band {
+    font-family: "Guaraldo";
+    font-size: 1.5rem;
+    margin-top: 3.2rem;
+    color: #5d7996;
+    position: absolute;
+    right: 1rem;
+    top: -1.5rem;
+}
+
