--- a/client/src/components/SignupLogin/SignupLogin.scss
+++ b/client/src/components/SignupLogin/SignupLogin.scss
@@ -1,19 +1,31 @@
+
+
 .btn-login {
-    background-color: #222930;
-    width: 30%;
+    background-color: #3b74ad;
+    width: 25%;
     border: none;
-    border-radius: .25rem;
+    border-radius: .5rem;
     color: white;
-    height: 2rem;
-    margin-top: 1rem;
+    height: 2.25rem;
+    box-shadow: 5px 5px 10px #888888;
+    margin-bottom: 2rem;
 
 }
 
 .email-style {
-    width: 30%;
+    width: 100%;
     align-items: center;
     justify-content: center;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    
+    
+}
+
+.label-header {
+    padding-top: 3rem;
 }
 
 .card-style {
@@ -26,3 +38,97 @@
     width: 50%;
 }
 
+.btn-update {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1.5rem;
+    background-color: #222930;
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+    border: none;
+    border-radius: .25rem;
+    color: white;
+    height: 2rem;
+}
+
+.form-style {
+    width: 32%;
+    border-radius: .5rem;
+    height: 2rem;
+    border: none;
+    margin: .5rem 0;
+}
+
+.header-login {
+    margin-top: 2rem;
+}
+
+.profile__card {
+    background-color:  #222930;
+    box-shadow: 5px 10px 18px #3b74ad;
+    border-radius: 1rem;
+    height: 35rem;
+    width: 25rem;
+    border: none;
+    margin-top: .5rem;
+    margin-bottom: 0;
+    color: white;
+    font-size: 1rem;
+}
+
+.profile__card-two {
+    
+    background-color:  #222930;
+    box-shadow: 5px 10px 18px #3b74ad;
+    border-radius: 1rem;
+    height: 35rem;
+    width: 35rem;
+    border: none;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2rem;
+    color: white;
+    font-size: 1rem;
+}
+.profile__card-wrapper {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+
+
+.forgot-pass {
+    background-color: #3b74ad;   
+    padding: .5rem .55rem;
+    border: none;
+    border-radius: .5rem;
+    color: white;
+    height: 2.25rem;
+    text-decoration: none;
+    margin-bottom: 2rem;   
+    box-shadow: 5px 5px 10px #888888;
+}
+
+
+.forgot__need {
+    display: flex;
+    flex-direction: column;    
+    
+    margin-top:2rem;
+    margin-left: 13rem;
+    margin-bottom: 1rem;
+    width: 25%;
+}
+.profile__icon {
+    position: relative;
+    right: 10rem;
+    bottom: 2.5rem;
+}
+
+.profile__icon-two {
+    position: relative;
+    right: 4rem;
+    bottom: 2.5rem;
+}
