--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -11,45 +11,45 @@
     &__tagline {
         z-index: 9999;    
        
-        position: absolute;
-        width: 50%;
-        left: 32rem;
-        margin-top: 1rem;
+        position: relative;
+        width: 100%;
+        
+       
       
     }
 
-    &__left{
-        display: flex;
-        justify-content: space-between;
-        width: 15%;
-        margin-left: 4rem;
-    }
+//     &__left{
+//         display: flex;
+//         justify-content: space-between;
+//         width: 15%;
+//         margin-left: 4rem;
+//     }
 
-    &__right {
-        display: flex;
-        justify-content: space-between;
-        width: 25%;
-    }
+//     &__right {
+//         display: flex;
+//         justify-content: space-between;
+//         width: 25%;
+//     }
 
-    &__facebook {
-        width: 3.5rem;
-        height: 3.5rem; 
-        border-radius: 20%;
-        border: 2px solid #304050;
-        margin-top: 2.5rem;
-        margin-right: 4rem;
-        margin-left: 4rem;
-    }
+//     &__facebook {
+//         width: 3.5rem;
+//         height: 3.5rem; 
+//         border-radius: 20%;
+//         border: 2px solid #304050;
+//         margin-top: 2.5rem;
+//         margin-right: 4rem;
+//         margin-left: 4rem;
+//     }
 
-    &__band {
-        width: 4rem;
-        height: 3.75rem; 
-        border-radius: 20%;
+//     &__band {
+//         width: 4rem;
+//         height: 3.75rem; 
+//         border-radius: 20%;
         
-        margin-top: 2.5rem;
-        margin-right: 1rem;
-        margin-left: 4rem;
-    }
+//         margin-top: 2.5rem;
+//         margin-right: 1rem;
+//         margin-left: 4rem;
+//     }
 
     
 
