--- a/client/src/components/Main/Main.scss
+++ b/client/src/components/Main/Main.scss
@@ -1,39 +1,87 @@
+@import '../../partials/mixins.scss';
 
+// .main {
+
+//     &__logo {
+//         border-bottom-left-radius: 10rem;
+//         border-bottom-right-radius: 10rem;
+//         box-shadow: 1px 8px 15px #888888;
+//         position: absolute;
+//         top: 0;
+//         right: 24%;
+        
+//     }
+
+//     &__search {
+//         padding: 2rem 10rem 2rem 12rem;
+//         width: 30rem;
+//         font-size: 1.5rem;
+//         margin-top: 35rem;
+//         margin-bottom: 5.8rem;
+//         border-radius: 1rem;
+//         border: solid #3b74ad;
+//         box-shadow: 5px 10px 18px #888888;
+//     }
+
+//     &__search-button {
+//         height: 9rem;
+//         width: 15rem;
+//         margin-top: 2rem;  
+        
+//     }
+
+//     &__search-button:hover {
+//       box-shadow: 5px 10px 18px #888888;
+//       border-radius: 1rem;
+//       background-color: #3b74ad;
+        
+//     }
+// }
 
 .main {
 
+    max-height: 50vh;
+
     &__logo {
-        border-bottom-left-radius: 10rem;
-        border-bottom-right-radius: 10rem;
         box-shadow: 1px 8px 15px #888888;
-        position: absolute;
-        top: 0;
-        right: 24%;
+        position: relative;
+        
+        height: 10rem;
+        margin-left: auto;
+        margin-right: auto;
+       
+        @include tablet {
+            height: 20rem;
+            border-bottom-left-radius: 10rem;
+        border-bottom-right-radius: 10rem;
+        }
+        
+        @include desktop {
+            height: 35rem;
+        }
         
     }
 
     &__search {
-        padding: 2rem 10rem 2rem 12rem;
-        width: 30rem;
-        font-size: 1.5rem;
-        margin-top: 35rem;
-        margin-bottom: 5.8rem;
-        border-radius: 1rem;
+        padding: 1rem 3rem 1rem 1rem;
+        width: 15rem;
+        font-size: 1rem;
+        margin-top: 2rem;
+        border-radius: .5rem;
         border: solid #3b74ad;
         box-shadow: 5px 10px 18px #888888;
+
+        @include tablet {
+            padding: 1rem 1rem 1rem 10rem;
+            width: 22rem;
+        }
+
+        @include desktop {
+            padding: 2rem 13rem 2rem 15rem;
+            width: 22rem;
+            font-size: 1.5rem;
+            margin-top: 2rem;
+        }
     }
 
-    &__search-button {
-        height: 9rem;
-        width: 15rem;
-        margin-top: 2rem;  
-        
-    }
-
-    &__search-button:hover {
-      box-shadow: 5px 10px 18px #888888;
-      border-radius: 1rem;
-      background-color: #3b74ad;
-        
-    }
 }
