--- a/client/src/components/SideBar/Navbar.scss
+++ b/client/src/components/SideBar/Navbar.scss
@@ -1,131 +1,305 @@
-.navbar {
-    background-color: #222930;
-    height: 80px;
-    display: flex;
+@import '../../partials/mixins.scss';
+
+// .navbar {
+//     background-color: #222930;
+//     height: 80px;
+//     display: flex;
    
-    align-items: center;
-  }
+//     align-items: center;
+//   }
   
-  .menu-bars {
-    margin-left: 2rem;
-    font-size: 2rem;
-    background: none;
-  }
+//   .menu-bars {
+//     margin-left: 2rem;
+//     font-size: 2rem;
+//     background: none;
+//   }
   
-  .nav-menu {
-    background-color: #252d35;
-    width: 250px;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    left: -100%;
-    transition: 850ms;
-  }
+//   .nav-menu {
+//     background-color: #252d35;
+//     width: 250px;
+//     height: 100vh;
+//     display: flex;
+//     justify-content: center;
+//     position: fixed;
+//     top: 0;
+//     left: -100%;
+//     transition: 850ms;
+//   }
   
-  .nav-menu.active {
-    left: 0;
-    transition: 350ms;
-  }
+//   .nav-menu.active {
+//     left: 0;
+//     transition: 350ms;
+//   }
   
-  .nav-text {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    padding: 8px 0px 8px 16px;
-    list-style: none;
-    height: 60px;
-  }
+//   .nav-text {
+//     display: flex;
+//     justify-content: start;
+//     align-items: center;
+//     padding: 8px 0px 8px 16px;
+//     list-style: none;
+//     height: 60px;
+//   }
   
-  .nav-text a {
-    text-decoration: none;
-    color: #f5f5f5;
-    font-size: 18px;
-    width: 95%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: 0 16px;
-    border-radius: 4px;
-  }
+//   .nav-text a {
+//     text-decoration: none;
+//     color: #f5f5f5;
+//     font-size: 18px;
+//     width: 95%;
+//     height: 100%;
+//     display: flex;
+//     align-items: center;
+//     padding: 0 16px;
+//     border-radius: 4px;
+//   }
   
-  .nav-text a:hover {
-    background-color: #3b74ad;
-  }
+//   .nav-text a:hover {
+//     background-color: #3b74ad;
+//   }
   
-  .nav-menu-items {
-    width: 100%;
-  }
+//   .nav-menu-items {
+//     width: 100%;
+//   }
   
-  .navbar-toggle {
-    background-color: #252d35;
-    width: 100%;
-    height: 80px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-  }
+//   .navbar-toggle {
+//     background-color: #252d35;
+//     width: 100%;
+//     height: 80px;
+//     display: flex;
+//     justify-content: start;
+//     align-items: center;
+//   }
   
-  span {
-    margin-left: 16px;
-  }
+//   span {
+//     margin-left: 16px;
+//   }
 
-  .wrapper {
-    display: flex;
-    justify-content: space-evenly;
-    background-color: #222930;
-  }
+//   .wrapper {
+//     display: flex;
+//     justify-content: space-evenly;
+//     background-color: #222930;
+//   }
 
-  .current-nav-user {
-    position: absolute;
-    left: 1rem;
-    margin-top: 1rem;
-    box-shadow: 5px 10px 18px #888888;
-    border-radius: .25rem;
-    text-decoration: none;
-    background-color: #222930;
-    color: white;
-    width: 5%;
-    height: 2.5%
+//   .current-nav-user {
+//     position: absolute;
+//     left: 1rem;
+//     margin-top: 1rem;
+//     box-shadow: 5px 10px 18px #888888;
+//     border-radius: .25rem;
+//     text-decoration: none;
+//     background-color: #222930;
+//     color: white;
+//     width: 5%;
+//     height: 2.5%
     
-  }
+//   }
 
-  .current-nav-user-two {
-    position: absolute;
-    left: 7.4rem;
-    margin-top: 1rem;
-    box-shadow: 5px 10px 18px #888888;
-    border-radius: .25rem;
-    text-decoration: none;
-    background-color: #222930;
-    color: white;
-    width: 5%;
-    height: 2.5%
+//   .current-nav-user-two {
+//     position: absolute;
+//     left: 7.4rem;
+//     margin-top: 1rem;
+//     box-shadow: 5px 10px 18px #888888;
+//     border-radius: .25rem;
+//     text-decoration: none;
+//     background-color: #222930;
+//     color: white;
+//     width: 5%;
+//     height: 2.5%
   
     
     
-  }
+//   }
 
-  .current-nav-user-two:hover, .current-nav-user:hover {
-    background-color: #3b74ad;
-  }
+//   .current-nav-user-two:hover, .current-nav-user:hover {
+//     background-color: #3b74ad;
+//   }
 
-  .logo-transparent {
-    position: absolute;
-    top: -4.75rem;
-    right: 44rem;    
-    height: 25%;
-    width: 25%;
-  }
+//   .logo-transparent {
+//     position: absolute;
+//     top: -4.75rem;
+//     right: 44rem;    
+//     height: 25%;
+//     width: 25%;
+//   }
 
-  .header__band {
-    font-family: "Guaraldo";
-    font-size: 1.5rem;
-    margin-top: 3.2rem;
-    color: #5d7996;
-    position: absolute;
-    right: 1rem;
-    top: -1.5rem;
+//   .header__band {
+//     font-family: "Guaraldo";
+//     font-size: 1.5rem;
+//     margin-top: 3.2rem;
+//     color: #5d7996;
+//     position: absolute;
+//     right: 1rem;
+//     top: -1.5rem;
+// }
+
+.navbar {
+  background-color: #222930;
+  height: 5rem;
+  display: flex;
+ 
+  align-items: center;
+
+  @include desktop {
+    height: 10rem;
+  }
 }
+
+
+// .menu-bars {
+//   margin-left: 2rem;
+//   font-size: 2rem;
+//   background: none;
+// }
+
+// .nav-menu {
+//   background-color: #252d35;
+//   width: 250px;
+//   height: 100vh;
+//   display: flex;
+//   justify-content: center;
+//   position: fixed;
+//   top: 0;
+//   left: -100%;
+//   transition: 850ms;
+// }
+
+// .nav-menu.active {
+//   left: 0;
+//   transition: 350ms;
+// }
+
+// .nav-text {
+//   display: flex;
+//   justify-content: start;
+//   align-items: center;
+//   padding: 8px 0px 8px 16px;
+//   list-style: none;
+//   height: 60px;
+// }
+
+// .nav-text a {
+//   text-decoration: none;
+//   color: #f5f5f5;
+//   font-size: 18px;
+//   width: 95%;
+//   height: 100%;
+//   display: flex;
+//   align-items: center;
+//   padding: 0 16px;
+//   border-radius: 4px;
+// }
+
+// .nav-text a:hover {
+//   background-color: #3b74ad;
+// }
+
+// .nav-menu-items {
+//   width: 100%;
+// }
+
+// .navbar-toggle {
+//   background-color: #252d35;
+//   width: 100%;
+//   height: 80px;
+//   display: flex;
+//   justify-content: start;
+//   align-items: center;
+// }
+
+// span {
+//   margin-left: 16px;
+// }
+
+// .wrapper {
+//   display: flex;
+//   justify-content: space-evenly;
+//   background-color: #222930;
+// }
+
+.current-nav-user {
+  position: relative;
+  display: flex; 
+  // box-shadow: 5px 10px 18px #888888;
+  text-decoration: none;
+  background-color: #222930;
+  color: white;
+  width: 50%;
+  height: 5%;
+  padding-left: 3.5rem;
+  border-right: solid 1px#888888;
+
+  @include tablet {
+    padding-left: 10.5rem;
+  }
+
+  @include desktop {
+    padding-left: 17rem;
+    height: 4rem;
+    padding-bottom: 1rem;
+  }  
+  
+  
+} 
+
+.nav-link-text {
+  color: white;
+  font-size: 1rem;
+  text-align: center;
+
+  @include desktop {
+    font-size: 1.5rem;
+    
+  }
+}
+
+.current-nav-user-two {
+  position: relative;
+  display: flex;
+  
+  // box-shadow: 5px 10px 18px #888888;
+  text-decoration: none;
+  background-color: #222930;
+  color: white;
+  width: 50%;
+  height: 5%;
+  padding-left: 2.5rem;
+
+  @include tablet {
+    padding-left: 10.5rem;
+  }
+  @include desktop {
+    padding-left: 20rem;
+    height: 4rem;
+    padding-bottom: 1rem;
+  }  
+  
+  
+}
+
+.current-nav-flex {
+  display: flex;
+  text-align: center;
+  
+}
+
+// .current-nav-user-two:hover, .current-nav-user:hover {
+//   background-color: #3b74ad;
+// }
+
+// .logo-transparent {
+//   position: absolute;
+//   top: -4.75rem;
+//   right: 44rem;    
+//   height: 25%;
+//   width: 25%;
+// }
+
+// .header__band {
+//   font-family: "Guaraldo";
+//   font-size: 1.5rem;
+//   margin-top: 3.2rem;
+//   color: #5d7996;
+//   position: absolute;
+//   right: 1rem;
+//   top: -1.5rem;
+// }
 
