--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -2,11 +2,12 @@
 
 .footer {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     height: 8rem;
     width: 100%;
     background-color: #222930;
-    margin-top: 1rem;
+    
 
     &__tagline {
         z-index: 9999;    
@@ -18,18 +19,24 @@
       
     }
 
-//     &__left{
-//         display: flex;
-//         justify-content: space-between;
-//         width: 15%;
-//         margin-left: 4rem;
-//     }
+    &__left{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 50%;
+        margin-left: 5rem;
+        margin-top: 1.5rem;
+        
+    }
 
-//     &__right {
-//         display: flex;
-//         justify-content: space-between;
-//         width: 25%;
-//     }
+    &__right {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 50%;
+        margin-left: 5rem;
+        
+    }
 
 //     &__facebook {
 //         width: 3.5rem;
@@ -41,15 +48,14 @@
 //         margin-left: 4rem;
 //     }
 
-//     &__band {
-//         width: 4rem;
-//         height: 3.75rem; 
-//         border-radius: 20%;
+    &__band {
+        width: 1.7rem;
+        height: 1.5rem; 
+        border-radius: 20%;
+       
         
-//         margin-top: 2.5rem;
-//         margin-right: 1rem;
-//         margin-left: 4rem;
-//     }
+      
+    }
 
     
 
