--- a/client/src/components/MainTwo/MainTwo.scss
+++ b/client/src/components/MainTwo/MainTwo.scss
@@ -219,19 +219,18 @@
 
 .card__wrapper {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   
 }
   
   .card__one {
     background-color:  #222930;
-    box-shadow: 5px 10px 18px #3b74ad;
-    border-radius: 1rem;
+    box-shadow: 2px 5px 8px #3b74ad;
+    
     height: 71rem;
-    width: 35rem;
-    margin-top: .5rem;
+    width: 100vw;   
     color: whitesmoke;
-    order: 1;
+    order: 4;
     
     
   
@@ -247,7 +246,7 @@
 
   .card__two {
     background-color:  #222930;;
-    box-shadow: 5px 10px 18px #3b74ad;
+    box-shadow: 2px 5px 8px #3b74ad;
   
     border: none;
     height: 50rem;
@@ -259,99 +258,100 @@
     justify-content: space-evenly;
     color: white;
     overflow-y: auto;
+    overflow-x: hidden;
     order: 1;
   
   }
   
-//   .card__three {
-//     background-color:  #222930;
-//     box-shadow: 5px 10px 18px #3b74ad;
-//     border-radius: 1rem;
-//     height: 35rem;
-//     width: 55rem;
-//     border: none;
-//     margin-top: 1rem;
-//     margin-right: 1rem;
-//     color: white;
+  .card__three {
+    background-color:  #222930;
+    box-shadow: 1px 1px 4px #3b74ad;
     
-//   }
+    height: 15rem;
+    width: 100vw;
+    border: none;
+    
+    color: white;
+    order: 2;
+    
+  }
 
-//   .card__four {
-//     background-color:  #222930;
-//     box-shadow: 5px 10px 18px #3b74ad;
-//     border-radius: 1rem;
-//     height: 35rem;
-//     width: 16rem;
-//     border: none;
-//     margin-top: .5rem;
-//     margin-bottom: 0;
-//     color: white;
-//     font-size: .75rem;
+  .card__four {
+    background-color:  #222930;
+    box-shadow: 1px 2px 5px #3b74ad;
     
-    
-//   }
-
-//   .card__wrapper-three {
-//     display: flex;
-//     flex-direction: row;
-//   }
-//   .card__five {
-//     background-color:  #222930;
-//     box-shadow: 5px 10px 18px #3b74ad;
-//     border-radius: 1rem;
-//     height: 35rem;
-//     width: 20rem;
-//     border: none;
-//     margin-top: 1rem; 
-//     margin-right: 1rem;
-//     overflow-y: auto;
-//     color: white;
-    
-    
-    
-//   }
-
-//   .card__wrapper-four {
-//     display: flex;
-//     flex-direction: column;
-//   }
-
-//   .card__six {
-//     background-color:  #222930;
-//     box-shadow: 5px 10px 18px #3b74ad;
-//     border-radius: 1rem;
-//     height: 35rem;
-//     width: 16rem;
-//     border: none;
-//     margin-top: 1rem;
+    height: 35rem;
+    width: 100vw;
+    border: none;  
+    color: white;
+    font-size: .75rem;
+    order: 2;
    
-//     color: white;
-//     font-size: .75rem;
-//     overflow-y: auto;
     
-//   }
+  }
 
-// /* width */
-// ::-webkit-scrollbar {
-//   width: 20px;
-// }
+  .card__wrapper-three {
+    display: flex;
+    flex-direction: column;
+  }
+  .card__five {
+    background-color:  #222930;
+    box-shadow: 2px 5px 8px #3b74ad;
+    
+    height: 35rem;
+    width: 20rem;
+    border: none;
+  
+   
+    overflow-y: auto;
+    color: white;
+    
+    
+    
+  }
 
-// /* Track */
-// ::-webkit-scrollbar-track {
-//   box-shadow: inset 0 0 5px grey; 
-//   border-radius: 10px;
-// }
+  .card__wrapper-four {
+    display: flex;
+    flex-direction: column;
+    
+  }
+
+  .card__six {
+    background-color:  #222930;
+    box-shadow: 2px 5px 8px #3b74ad;
+   
+    height: 35rem;
+    width: 100vw;
+    border: none;
+  
+   
+    color: white;
+    font-size: .75rem;
+    overflow-y: auto;
+    
+  }
+
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
  
-// /* Handle */
-// ::-webkit-scrollbar-thumb {
-//   background: #222930; 
-//   border-radius: 10px;
-// }
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #222930; 
+  border-radius: 10px;
+}
 
-// /* Handle on hover */
-// ::-webkit-scrollbar-thumb:hover {
-//   background: #334c64; 
-// }
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #334c64; 
+}
 
   .hero{
     
@@ -359,7 +359,7 @@
       border-radius: .5rem;
       margin-top: 10rem;
       height: 5rem;
-      width: 100vw; 
+      width: 97vw; 
         
       
     }
@@ -372,51 +372,52 @@
 
     &__bio {
       text-align: left;
-      margin-left: 1rem;
+      margin-left: .5rem;
       font-size: 1rem;
     }
 
     &__bio-text {
       width: 95%;
       text-align: left;
-      margin-left: 1rem;
+      margin-left: .5rem;
       line-height: 1.1rem;
       font-size: .75rem;
+      margin-bottom: .5rem;
       
     }
   
 
   }
 
-//   .band {
-//     display: flex;
-//     flex-direction: column;    
-//     margin-top: 0;
-//     margin-bottom: 36rem;
+  .band {
+    display: flex;
+    flex-direction: column;    
+    margin-top: 0;
+    margin-bottom: 36rem;
 
-//     &__header {
-//       margin-top: .5rem;
-//       font-size: 1.2rem;
-//     }
+    &__header {
+      margin-top: .5rem;
+      font-size: 1.2rem;
+    }
 
-//     &__header-two {
-//       text-align: left;
-//       font-size: 1rem;
-//       margin-top: .5rem;
-//       margin-left: .5rem;
+    &__header-two {
+      text-align: left;
+      font-size: 1rem;
+      margin-top: .5rem;
+      margin-left: .5rem;
       
-//     }
+    }
 
-//     &__ul {
-//       list-style: square;
-//       line-height: 0rem;
-//     }
+    &__ul {
+      list-style: square;
+      line-height: 0rem;
+    }
 
-//     &__member-name {
-//       margin: auto;
-//       text-align: left;
-//     }
-//   }
+    &__member-name {
+      margin: auto;
+      text-align: left;
+    }
+  }
 
 //   .releases {
 
