--- a/client/src/components/MainTwo/MainTwo.scss
+++ b/client/src/components/MainTwo/MainTwo.scss
@@ -227,7 +227,7 @@
     background-color:  #222930;
     box-shadow: 2px 5px 8px #3b74ad;
     
-    height: 71rem;
+    height: 75rem;
     width: 100vw;   
     color: whitesmoke;
     order: 4;
@@ -247,7 +247,7 @@
   .card__two {
     background-color:  #222930;;
     box-shadow: 2px 5px 8px #3b74ad;
-    
+    height: 50vh;
     border: none;
    
     width: 100vw;
@@ -299,10 +299,10 @@
     background-color:  #222930;
     box-shadow: 2px 5px 8px #3b74ad;
     
-    height: 35rem;
+    height: 30rem;
     width: 20rem;
     border: none;
-  
+    margin-bottom: .15rem;
    
     overflow-y: auto;
     color: white;
@@ -321,7 +321,7 @@
     background-color:  #222930;
     box-shadow: 2px 5px 8px #3b74ad;
    
-    height: 35rem;
+    height: 18rem;
     width: 100vw;
     border: none;
   
@@ -363,7 +363,7 @@
       border-radius: .5rem;
       margin-top: 1rem;
       height: 5rem;
-      width: 95vw; 
+      width: 90vw; 
       margin-left: .5rem;
         
       
@@ -406,7 +406,7 @@
     }
 
     &__header-two {
-      text-align: left;
+      text-align: center;
       font-size: 1rem;
       margin-top: .5rem;
       margin-left: .5rem;
@@ -416,6 +416,7 @@
     &__ul {
       list-style: square;
       line-height: 0rem;
+      margin-left: 4rem;
     }
 
     &__member-name {
