--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@
 .App {
   text-align: center;
   background-color: #c3cbdb;
-  height: 100vh;
+  height: 100%;
  
   
   
@@ -14,7 +14,8 @@
 .footer__main {
   position: absolute; 
   bottom: 0; 
-  width: 100%
+  width: 100%;
+  
 }
 
 
