--- a/client/src/components/Gallery/Gallery.scss
+++ b/client/src/components/Gallery/Gallery.scss
@@ -1,7 +1,35 @@
+@import "../../partials/mixins.scss";
 
 .slides {
     height: 10rem;
     width: 20rem;
     margin-top: 2.5rem;
+
+    @include tablet {
+        height: 20rem;
+        width: 30rem;
+        margin-left: 10rem;
+    }
+
+    @include desktop {
+        height: 30rem;
+        width: 42.5rem;
+        margin-left: 2.25rem;
+        margin-top: 2rem;
+        
+    }
     
+}
+
+.slides-wrapper {
+
+    @include tablet {
+
+        height: 25rem;
+    }
+
+    @include desktop {
+        height: 40rem;
+        margin: auto;
+    }
 }
