--- a/client/src/components/Main/Main.scss
+++ b/client/src/components/Main/Main.scss
@@ -1,4 +1,4 @@
-@import '../../partials/mixins.scss';
+@import "../../partials/mixins.scss";
 
 // .main {
 
@@ -9,7 +9,7 @@
 //         position: absolute;
 //         top: 0;
 //         right: 24%;
-        
+
 //     }
 
 //     &__search {
@@ -26,63 +26,78 @@
 //     &__search-button {
 //         height: 9rem;
 //         width: 15rem;
-//         margin-top: 2rem;  
-        
+//         margin-top: 2rem;
+
 //     }
 
 //     &__search-button:hover {
 //       box-shadow: 5px 10px 18px #888888;
 //       border-radius: 1rem;
 //       background-color: #3b74ad;
-        
+
 //     }
 // }
 
 .main {
+  max-height: 50vh;
 
-    max-height: 50vh;
+  @include desktop {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-content: center;
+    max-height: 100vh;
+  }
 
-    &__logo {
-        box-shadow: 1px 8px 15px #888888;
-        position: relative;
-        
-        height: 10rem;
-        margin-left: auto;
-        margin-right: auto;
-       
-       
-        @include tablet {
-            height: 20rem;
-            border-bottom-left-radius: 10rem;
-            border-bottom-right-radius: 10rem;
-        }
-        
-        @include desktop {
-            height: 35rem;
-        }
-        
+  &__logo {
+    box-shadow: 1px 8px 15px #888888;
+    position: relative;
+
+    height: 10rem;
+    margin-left: auto;
+    margin-right: auto;
+
+    @include tablet {
+      height: 20rem;
+      border-bottom-left-radius: 10rem;
+      border-bottom-right-radius: 10rem;
     }
 
-    &__search {
-        padding: 1rem 3rem 1rem 1rem;
-        width: 15rem;
-        font-size: 1rem;
-        margin-top: 2rem;
-        border-radius: .5rem;
-        border: solid #3b74ad;
-        box-shadow: 5px 10px 18px #888888;
+    @include desktop {
+      height: 24rem;
+      position: absolute;
+      top: 0;
+      right: 13rem;
+      
+    }
+  }
 
-        @include tablet {
-            padding: 1rem 1rem 1rem 10rem;
-            width: 22rem;
-        }
+  &__search {
+    padding: 1rem 3rem 1rem 1rem;
+    width: 15rem;
+    font-size: 1rem;
+    margin-top: 2rem;
+    border-radius: 0.5rem;
+    border: solid #3b74ad;
+    box-shadow: 5px 10px 18px #888888;
 
-        @include desktop {
-            padding: 2rem 13rem 2rem 15rem;
-            width: 22rem;
-            font-size: 1.5rem;
-            margin-top: 2rem;
-        }
+    @include tablet {
+      padding: 1rem 1rem 1rem 10rem;
+      width: 22rem;
     }
 
+    @include desktop {
+      padding: 2rem 13rem 2rem 15rem;
+      width: 22rem;
+      font-size: 1.5rem;
+      margin-top: 3rem;
+      margin-bottom: 10rem;
+      margin-top: 26rem;
+      
+    }
+  }
+
+  
 }
+
+
