--- a/client/src/components/MainTwo/MainTwo.scss
+++ b/client/src/components/MainTwo/MainTwo.scss
@@ -1,336 +1,130 @@
+@import "../../partials/mixins.scss";
 
-
-// .card__wrapper {
-//   display: flex;
-//   flex-direction: row;
-  
-// }
-  
-//   .card__one {
-//     background-color:  #222930;
-//     box-shadow: 5px 10px 18px #3b74ad;
-//     border-radius: 1rem;
-//     height: 71rem;
-//     width: 35rem;
-//     margin-top: .5rem;
-//     color: whitesmoke;
-
-    
-    
-  
-//   }
-
-//   .card__wrapper-two {
-//     margin-top: 0;
-//     width: 66rem;
-//     margin-left: 1rem;
-//   }
-
-//   .card__two {
-//     background-color:  #222930;;
-//     box-shadow: 5px 10px 18px #3b74ad;
-//     border-radius: 1rem;
-//     border: none;
-//     height: 35rem;
-//     width: 65rem;
-//     margin-right: 5rem;
-//     margin-top: .5rem;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: space-evenly;
-//     color: white;
-//     overflow-y: auto;
-    
-  
-//   }
-  
-//   .card__three {
-//     background-color:  #222930;
-//     box-shadow: 5px 10px 18px #3b74ad;
-//     border-radius: 1rem;
-//     height: 35rem;
-//     width: 55rem;
-//     border: none;
-//     margin-top: 1rem;
-//     margin-right: 1rem;
-//     color: white;
-    
-//   }
-
-//   .card__four {
-//     background-color:  #222930;
-//     box-shadow: 5px 10px 18px #3b74ad;
-//     border-radius: 1rem;
-//     height: 35rem;
-//     width: 16rem;
-//     border: none;
-//     margin-top: .5rem;
-//     margin-bottom: 0;
-//     color: white;
-//     font-size: .75rem;
-    
-    
-//   }
-
-//   .card__wrapper-three {
-//     display: flex;
-//     flex-direction: row;
-//   }
-//   .card__five {
-//     background-color:  #222930;
-//     box-shadow: 5px 10px 18px #3b74ad;
-//     border-radius: 1rem;
-//     height: 35rem;
-//     width: 20rem;
-//     border: none;
-//     margin-top: 1rem; 
-//     margin-right: 1rem;
-//     overflow-y: auto;
-//     color: white;
-    
-    
-    
-//   }
-
-//   .card__wrapper-four {
-//     display: flex;
-//     flex-direction: column;
-//   }
-
-//   .card__six {
-//     background-color:  #222930;
-//     box-shadow: 5px 10px 18px #3b74ad;
-//     border-radius: 1rem;
-//     height: 35rem;
-//     width: 16rem;
-//     border: none;
-//     margin-top: 1rem;
-   
-//     color: white;
-//     font-size: .75rem;
-//     overflow-y: auto;
-    
-//   }
-
-// /* width */
-// ::-webkit-scrollbar {
-//   width: 20px;
-// }
-
-// /* Track */
-// ::-webkit-scrollbar-track {
-//   box-shadow: inset 0 0 5px grey; 
-//   border-radius: 10px;
-// }
- 
-// /* Handle */
-// ::-webkit-scrollbar-thumb {
-//   background: #222930; 
-//   border-radius: 10px;
-// }
-
-// /* Handle on hover */
-// ::-webkit-scrollbar-thumb:hover {
-//   background: #334c64; 
-// }
-
-//   .hero{
-    
-//     &__image {
-//       border-radius: .5rem;
-//       margin-top: .5rem;
-//       height: 10rem;
-//       width: 50rem; 
-//       margin-left: 6rem;   
-      
-//     }
-
-//     &__wrapper {
-//       position: relative;
-      
-//     }
-
-//     &__bio {
-//       text-align: left;
-//       margin-left: 1rem;
-//       font-size: 1rem;
-//     }
-
-//     &__bio-text {
-//       width: 95%;
-//       text-align: left;
-//       margin-left: 1rem;
-//       line-height: 1.1rem;
-//       font-size: .75rem;
-      
-//     }
-  
-
-//   }
-
-//   .band {
-//     display: flex;
-//     flex-direction: column;    
-//     margin-top: 0;
-//     margin-bottom: 36rem;
-
-//     &__header {
-//       margin-top: .5rem;
-//       font-size: 1.2rem;
-//     }
-
-//     &__header-two {
-//       text-align: left;
-//       font-size: 1rem;
-//       margin-top: .5rem;
-//       margin-left: .5rem;
-      
-//     }
-
-//     &__ul {
-//       list-style: square;
-//       line-height: 0rem;
-//     }
-
-//     &__member-name {
-//       margin: auto;
-//       text-align: left;
-//     }
-//   }
-
-//   .releases {
-
-//     &__header {
-//       font-size:1.1rem;
-//     }
-//   }
-
-//   .navbar-absolute {
-//     position: absolute;
-//   }
-
-//   .header-absolute {
-//     position: absolute; 
-//     top: 0;  
-//   }
-  
-
-
+.main-desktop {
+  display: none;
+}
 
 .card__wrapper {
   display: flex;
   flex-direction: column;
+
+  @include tablet {
+    // flex-direction: row;
+  }
+}
+
+.card__one {
+  background-color: #222930;
+  box-shadow: 2px 5px 8px #3b74ad;
+
+  height: 75rem;
+  width: 100vw;
+  color: whitesmoke;
+ 
+
+  @include tablet {
+    height: 71rem;
+  }
+}
+
+.card__wrapper-two {
+  border-top: #888888;
+}
+
+.card__two {
+  background-color: #222930;
+  box-shadow: 2px 5px 8px #3b74ad;
+  height: 50vh;
+  border: none;
+
+  width: 100vw;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: space-evenly;
+  color: white;
+  overflow-y: auto;
+  overflow-x: hidden;
+  
+
+  @include tablet {
+    justify-content: flex-start;
+  }
+}
+
+.card__three {
+  background-color: #222930;
+  box-shadow: 1px 1px 4px #3b74ad;
+
+  height: 15rem;
+  width: 100vw;
+  border: none;
+
+  color: white;
+  
+
+  @include tablet {
+    height: 25rem;
+  }
+}
+
+.card__four {
+  background-color: #222930;
+  box-shadow: 1px 2px 5px #3b74ad;
+  overflow-y: auto;
+  height: 30rem;
+  width: 100vw;
+  border: none;
+  color: white;
+  font-size: 0.75rem;
   
 }
-  
-  .card__one {
-    background-color:  #222930;
-    box-shadow: 2px 5px 8px #3b74ad;
-    
-    height: 75rem;
-    width: 100vw;   
-    color: whitesmoke;
-    order: 4;
-    
-    
-  
-  }
 
-  .card__wrapper-two {
-    
-    border-top: #888888;
-    
-   
-    
-  }
+.card__wrapper-three {
+  display: flex;
 
-  .card__two {
-    background-color:  #222930;;
-    box-shadow: 2px 5px 8px #3b74ad;
-    height: 50vh;
-    border: none;
-   
+  @include tablet {
+    flex-direction: row;
+  }
+}
+.card__five {
+  background-color: #222930;
+  box-shadow: 2px 5px 8px #3b74ad;
+
+  height: 30rem;
+  width: 20rem;
+  border: none;
+  margin-bottom: 0.15rem;
+
+  overflow-y: auto;
+  color: white;
+
+  @include tablet {
     width: 100vw;
-    
-   
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-content: space-evenly;
-    color: white;
-    overflow-y: auto;
-    overflow-x: hidden;
-    order: 1;
-  
+    height: 32rem;
   }
-  
-  .card__three {
-    background-color:  #222930;
-    box-shadow: 1px 1px 4px #3b74ad;
-    
-    height: 15rem;
-    width: 100vw;
-    border: none;
-    
-    color: white;
-    order: 2;
-    
-  }
+}
 
-  .card__four {
-    background-color:  #222930;
-    box-shadow: 1px 2px 5px #3b74ad;
-    
-    height: 35rem;
-    width: 100vw;
-    border: none;  
-    color: white;
-    font-size: .75rem;
-    order: 2;
-   
-    
-  }
+.card__wrapper-four {
+  display: flex;
+  flex-direction: column;
+}
 
-  .card__wrapper-three {
-    display: flex;
-    flex-direction: column;
-  }
-  .card__five {
-    background-color:  #222930;
-    box-shadow: 2px 5px 8px #3b74ad;
-    
-    height: 30rem;
-    width: 20rem;
-    border: none;
-    margin-bottom: .15rem;
-   
-    overflow-y: auto;
-    color: white;
-    
-    
-    
-  }
+.card__six {
+  background-color: #222930;
+  box-shadow: 2px 5px 8px #3b74ad;
 
-  .card__wrapper-four {
-    display: flex;
-    flex-direction: column;
-    
-  }
+  height: 18rem;
+  width: 100vw;
+  border: none;
 
-  .card__six {
-    background-color:  #222930;
-    box-shadow: 2px 5px 8px #3b74ad;
-   
-    height: 18rem;
-    width: 100vw;
-    border: none;
-  
-   
-    color: white;
-    font-size: .75rem;
-    overflow-y: auto;
-    
-  }
+  color: white;
+  font-size: 0.75rem;
+  overflow-y: auto;
+}
 
 /* width */
 ::-webkit-scrollbar {
@@ -339,84 +133,320 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
+  box-shadow: inset 0 0 5px grey;
   border-radius: 10px;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #222930; 
+  background: #222930;
   border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #334c64; 
+  background: #334c64;
 }
 
-  .hero{
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
+  &__image {
+    border-radius: 0.5rem;
+    margin-top: 1rem;
+    height: 5rem;
+    width: 90vw;
+    margin-left: 0.5rem;
+
+    @include tablet {
+      height: 8rem;
+      width: 96vw;
+      margin-left: 1rem;
+    }
+  }
+
+  &__wrapper {
+    position: relative;
+  }
+
+  &__bio {
+    text-align: left;
+    margin-left: 0.5rem;
+    font-size: 1rem;
+  }
+
+  &__bio-text {
+    width: 95%;
+    text-align: left;
+    margin-left: 0.5rem;
+    line-height: 1.1rem;
+    font-size: 0.75rem;
+    margin-bottom: 0.5rem;
+  }
+}
+
+.band {
+  display: flex;
+  flex-direction: column;
+  margin-top: 0;
+  margin-bottom: 1rem;
+
+  &__header {
+    margin-top: 0.5rem;
+    font-size: 1.2rem;
+  }
+
+  &__header-two {
+    text-align: center;
+    font-size: 1rem;
+    margin-top: 0.5rem;
+    margin-left: 0.5rem;
+  }
+
+  &__ul {
+    list-style: square;
+    line-height: 0rem;
+    margin-left: 4rem;
+
+    @include tablet {
+      margin-left: 17.5rem;
+    }
+  }
+
+  &__member-name {
+    margin: auto;
+    text-align: left;
+  }
+}
+
+.releases {
+  &__header {
+    font-size: 1.1rem;
+
+    @include tablet {
+      font-size: 1.5rem;
+      margin-bottom: 0;
+      position: static;
+    }
+  }
+
+  &-wrapper {
+    @include tablet {
+      margin-right: 1rem;
+      margin-left: 1rem;
+      border: 1px grey solid;
+      border-radius: 0.5rem;
+    }
+  }
+
+  &__flex {
+    display: flex;
+    flex-direction: column;
+
+    
+    @include tablet {
+      flex-direction: row;
+    }
+    @include desktop {
+      flex-direction: column;
+    }
+  }
+}
+
+//   .navbar-absolute {
+//     position: absolute;
+//   }
+
+//   .header-absolute {
+//     position: absolute;
+//     top: 0;
+//   }
+
+///////////////////////////////////////////////////////////////////////////////////////////
+
+@include desktop {
+  .main-mobile-tablet {
+    display: none;
+  }
+
+  .main-desktop {
+    display: initial;
+  }
+
+  .card__wrapper {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .card__one {
+    background-color: #222930;
+    box-shadow: 5px 10px 18px #3b74ad;
+    border-radius: 1rem;
+    height: 71rem;
+    width: 35rem;
+    margin-top: 0.5rem;
+    margin-left: .5rem;
+    color: whitesmoke;
+    order: 1;
+  }
+
+  .card__wrapper-two {
+    margin-top: 0;
+    width: 66rem;
+    margin-left: 1rem;
+  }
+
+  .card__two {
+    background-color: #222930;
+    box-shadow: 5px 10px 18px #3b74ad;
+    border-radius: 1rem;
+    border: none;
+    height: 35rem;
+    width: 65rem;
+    margin-right: 5rem;
+    margin-top: 0.5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    
+    color: white;
+    overflow-y: auto;
+  }
+
+  .card__three {
+    background-color: #222930;
+    box-shadow: 5px 10px 18px #3b74ad;
+    border-radius: 1rem;
+    height: 35rem;
+    width: 55rem;
+    border: none;
+    margin-top: 1rem;
+    margin-right: 1rem;
+    color: white;
+  }
+
+  .card__four {
+    background-color: #222930;
+    box-shadow: 5px 10px 18px #3b74ad;
+    border-radius: 1rem;
+    height: 35rem;
+    width: 16rem;
+    border: none;
+    margin-top: 0.5rem;
+    margin-bottom: 0;
+    color: white;
+    font-size: 0.75rem;
+  }
+
+  .card__wrapper-three {
+    display: flex;
+    flex-direction: row;
+  }
+  .card__five {
+    background-color: #222930;
+    box-shadow: 5px 10px 18px #3b74ad;
+    border-radius: 1rem;
+    height: 35rem;
+    width: 20rem;
+    border: none;
+    margin-top: 1rem;
+    margin-right: 1rem;
+    overflow-y: auto;
+    color: white;
+  }
+
+  .card__wrapper-four {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .card__six {
+    background-color: #222930;
+    box-shadow: 5px 10px 18px #3b74ad;
+    border-radius: 1rem;
+    height: 35rem;
+    width: 16rem;
+    border: none;
+    margin-top: 1rem;
+
+    color: white;
+    font-size: 0.75rem;
+    overflow-y: auto;
+  }
+
+  /* width */
+  ::-webkit-scrollbar {
+    width: 20px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #222930;
+    border-radius: 10px;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #334c64;
+  }
+
+  .hero {
     &__image {
-      border-radius: .5rem;
-      margin-top: 1rem;
-      height: 5rem;
-      width: 90vw; 
-      margin-left: .5rem;
-        
-      
+      border-radius: 0.5rem;
+      margin-top: 0.5rem;
+      height: 10rem;
+      width: 50rem;
+      margin-left: 6rem;
     }
 
     &__wrapper {
       position: relative;
-      
-      
     }
 
     &__bio {
       text-align: left;
-      margin-left: .5rem;
+      margin-left: 1rem;
       font-size: 1rem;
     }
 
     &__bio-text {
       width: 95%;
       text-align: left;
-      margin-left: .5rem;
+      margin-left: 1rem;
       line-height: 1.1rem;
-      font-size: .75rem;
-      margin-bottom: .5rem;
-      
+      font-size: 0.75rem;
     }
-  
-
   }
 
   .band {
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;
     margin-top: 0;
-    margin-bottom: 36rem;
+    
 
     &__header {
-      margin-top: .5rem;
+      margin-top: 0.5rem;
       font-size: 1.2rem;
     }
 
     &__header-two {
-      text-align: center;
+      text-align: left;
       font-size: 1rem;
-      margin-top: .5rem;
-      margin-left: .5rem;
-      
+      margin-top: 0.5rem;
+      margin-left: 0.5rem;
     }
 
     &__ul {
       list-style: square;
       line-height: 0rem;
-      margin-left: 4rem;
+      margin-left: 1rem;
     }
 
     &__member-name {
@@ -425,21 +455,9 @@
     }
   }
 
-//   .releases {
-
-//     &__header {
-//       font-size:1.1rem;
-//     }
-//   }
-
-//   .navbar-absolute {
-//     position: absolute;
-//   }
-
-//   .header-absolute {
-//     position: absolute; 
-//     top: 0;  
-//   }
-  
-
-  
+  .releases {
+    &__header {
+      font-size: 1.1rem;
+    }
+  }
+}
