--- a/client/src/components/MainTwo/MainTwo.scss
+++ b/client/src/components/MainTwo/MainTwo.scss
@@ -358,7 +358,7 @@
 
   .card__wrapper-four {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
 
   .card__six {
