--- a/client/src/components/Main/Main.scss
+++ b/client/src/components/Main/Main.scss
@@ -57,42 +57,49 @@
     margin-left: auto;
     margin-right: auto;
 
+    
     @include tablet {
+      
       height: 20rem;
       border-bottom-left-radius: 10rem;
       border-bottom-right-radius: 10rem;
     }
 
     @include desktop {
-      height: 24rem;
-      position: absolute;
-      top: 0;
-      right: 36rem;
+      height: 24rem;      
+      
+      right: 0;
       
     }
+  }
+
+  &__logo-wrapper {
+    height: 0;
   }
 
   &__search {
     padding: 1rem 3rem 1rem 1rem;
     width: 15rem;
     font-size: 1rem;
-    margin-top: 2rem;
+    top: 12rem;
     border-radius: 0.5rem;
     border: solid #3b74ad;
     box-shadow: 5px 10px 18px #888888;
+    position: relative;
 
     @include tablet {
       padding: 1rem 1rem 1rem 10rem;
       width: 22rem;
+      top: 22.5rem;
+      
     }
 
     @include desktop {
       padding: 2rem 13rem 2rem 15rem;
       width: 22rem;
       font-size: 1.5rem;
-      margin-top: 3rem;
-      margin-bottom: 10rem;
-      margin-top: 26rem;
+      top: 27rem;
+      
       
     }
   }
