style fixes and logout button added to side menu

--- a/client/src/components/Main/Main.scss
+++ b/client/src/components/Main/Main.scss
@@ -52,7 +52,8 @@
   &__logo {
     box-shadow: 1px 8px 15px #888888;
     position: relative;
-
+    border-bottom-left-radius: 4rem;
+    border-bottom-right-radius: 4rem;
     height: 10rem;
     margin-left: auto;
     margin-right: auto;
@@ -99,6 +100,7 @@
       width: 22rem;
       font-size: 1.5rem;
       top: 27rem;
+      left: .5rem;
       
       
     }
