--- a/client/src/components/Gallery/Gallery.scss
+++ b/client/src/components/Gallery/Gallery.scss
@@ -1,35 +1,48 @@
 @import "../../partials/mixins.scss";
 
 .slides {
-    height: 10rem;
-    width: 20rem;
-    margin-top: 2.5rem;
+    height: 30vh;
+    width: 100%;
+    margin-left:auto;
+    margin-right: auto;
+    
+
 
     @include tablet {
-        height: 20rem;
-        width: 30rem;
-        margin-left: 10rem;
+        height: 40vh;
+        // width: 30rem;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 1rem;
     }
 
     @include desktop {
-        height: 30rem;
-        width: 42.5rem;
-        margin-left: 2.25rem;
-        margin-top: 2rem;
+        position: relative;
+        left: .6rem;
+        top: 1rem;
+        width: 97%;
+        height: 25rem;
         
     }
     
 }
 
 .slides-wrapper {
+    
+
+    height: 15rem;
+    width: 95vw;
+    margin-left: .5rem;
 
     @include tablet {
 
         height: 25rem;
+        margin-left: 1.5rem;
     }
 
     @include desktop {
         height: 40rem;
+        width: 100%;
         margin: auto;
     }
 }
