--- a/client/src/components/MainTwo/MainTwo.scss
+++ b/client/src/components/MainTwo/MainTwo.scss
@@ -49,6 +49,7 @@
   @include tablet {
     justify-content: flex-start;
   }
+  
 }
 
 .card__three {
@@ -89,7 +90,7 @@
   box-shadow: 2px 5px 8px #3b74ad;
 
   height: 30rem;
-  width: 20rem;
+  width: 100vw;
   border: none;
   margin-bottom: 0.15rem;
 
@@ -276,6 +277,7 @@
   .card__wrapper {
     display: flex;
     flex-direction: row;
+    width: 95w;
   }
 
   .card__one {
@@ -283,16 +285,17 @@
     box-shadow: 5px 10px 18px #3b74ad;
     border-radius: 1rem;
     height: 71rem;
-    width: 35rem;
+    width: 30%;
+    margin-right: 0;
     margin-top: 0.5rem;
     margin-left: 0.5rem;
     color: whitesmoke;
-    order: 1;
+    
   }
 
   .card__wrapper-two {
     margin-top: 0;
-    width: 66rem;
+    width: 60%;
     margin-left: 1rem;
   }
 
@@ -302,7 +305,7 @@
     border-radius: 1rem;
     border: none;
     height: 35rem;
-    width: 65rem;
+    width: 98%;
     margin-right: 5rem;
     margin-top: 0.5rem;
     display: flex;
@@ -317,7 +320,7 @@
     box-shadow: 5px 10px 18px #3b74ad;
     border-radius: 1rem;
     height: 35rem;
-    width: 55rem;
+    width: 70%;
     border: none;
     margin-top: 1rem;
     margin-right: 1rem;
@@ -329,7 +332,7 @@
     box-shadow: 5px 10px 18px #3b74ad;
     border-radius: 1rem;
     height: 35rem;
-    width: 16rem;
+    width: 97%;
     border: none;
     margin-top: 0.5rem;
     margin-bottom: 0;
@@ -346,7 +349,7 @@
     box-shadow: 5px 10px 18px #3b74ad;
     border-radius: 1rem;
     height: 35rem;
-    width: 20rem;
+    width: 30%;
     border: none;
     margin-top: 1rem;
     margin-right: 1rem;
@@ -357,6 +360,7 @@
   .card__wrapper-four {
     display: flex;
     flex-direction: column;
+    width: 15%;
   }
 
   .card__six {
@@ -364,7 +368,7 @@
     box-shadow: 5px 10px 18px #3b74ad;
     border-radius: 1rem;
     height: 35rem;
-    width: 16rem;
+    width: 97%;
     border: none;
     margin-top: 1rem;
 
@@ -400,8 +404,9 @@
       border-radius: 0.5rem;
       margin-top: 0.5rem;
       height: 10rem;
-      width: 50rem;
-      margin-left: 6rem;
+      width: 56.5vw;
+      margin-left: 1rem;
+      margin-right: 1rem;
     }
 
     &__wrapper {
