--- a/client/src/components/SideBar/Navbar.scss
+++ b/client/src/components/SideBar/Navbar.scss
@@ -18,6 +18,10 @@
   margin-left: 1rem;
   font-size: 1.25rem;
   background: none;
+
+  @include desktop {
+    font-size: 1.5rem;
+  }
 }
 
 .nav-menu {
@@ -65,6 +69,7 @@
 
 .nav-menu-items {
   width: 100%;
+  z-index: 99999;
 }
 
 .navbar-toggle {
@@ -96,7 +101,7 @@ span {
   width: 50%;
   height: 5%;
   padding-left: 3.5rem;
-  border-right: solid 1px#888888;
+  border-left: solid 1px#888888;
 
   @include tablet {
     padding-left: 10.5rem;
@@ -115,6 +120,8 @@ span {
   color: white;
   font-size: 1rem;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 
   @include desktop {
     font-size: 1.5rem;
@@ -148,6 +155,7 @@ span {
 
 .current-nav-flex {
   display: flex;
+  flex-direction: row-reverse;
   text-align: center;
   
 }
@@ -157,21 +165,12 @@ span {
 }
 
 .logo-transparent {
-  position: absolute;
-  top: -1.5rem;
-  right: 34%; 
   
-  height: 8rem;
-  margin-left: auto;
-  margin-right: auto;
-  
-
-  @include tablet {
-    top: -8.5rem;
-    right: 0;
+    top: 18.5rem;
+    right: 1rem;
     position: relative;
     height: 12rem;
-  }
+  
 }
 
 .header__band {
@@ -190,3 +189,31 @@ span {
   }
 }
 
+.logout-flex {
+  display: flex;
+  position: relative;
+  left: 1.25rem;
+  text-decoration: none;
+  top: 30vh;
+}
+
+.logout-text {
+  text-decoration: none;
+  color: whitesmoke;
+  font-size: 1.05rem;
+  z-index: 99999;
+  padding: 8px 0px 8px 16px;
+  text-decoration: none;
+  color: #f5f5f5;
+  font-size: 18px;
+  width: 95%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  border-radius: 4px;
+}
+
+.logout-text a:hover {
+  background-color: #3b74ad;
+}
