--- a/client/src/components/SideBar/Navbar.scss
+++ b/client/src/components/SideBar/Navbar.scss
@@ -89,67 +89,25 @@ span {
   background-color: #222930;
 }
 
-.current-nav-user {
-  position: relative;
-  display: flex;
-  // box-shadow: 5px 10px 18px #888888;
-  text-decoration: none;
-  background-color: #222930;
-  color: white;
-  width: 50%;
-  height: 5%;
-  padding-left: 3.5rem;
-  border-left: solid 1px#888888;
-
-  @include tablet {
-    padding-left: 10.5rem;
-  }
-
-  @include desktop {
-    padding-left: 17rem;
-    height: 4rem;
-    padding-bottom: 1rem;
-  }
-}
-
-.nav-link-text {
-  color: white;
-  font-size: 1rem;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-
-  @include desktop {
-    font-size: 1.5rem;
-  }
-}
-
-.current-nav-user-two {
-  position: relative;
-  display: flex;
-
-  // box-shadow: 5px 10px 18px #888888;
-  text-decoration: none;
-  background-color: #222930;
-  color: white;
-  width: 50%;
-  height: 5%;
-  padding-left: 2.5rem;
-
-  @include tablet {
-    padding-left: 10.5rem;
-  }
-  @include desktop {
-    padding-left: 20rem;
-    height: 4rem;
-    padding-bottom: 1rem;
-  }
-}
-
 .current-nav-flex {
   display: flex;
   flex-direction: row-reverse;
+  justify-content: space-evenly;
   text-align: center;
+}
+
+.current-nav-user {
+  background-color: #222930;
+  width: 50%;
+  color: white;
+  font-size: 0.75rem;
+  text-decoration: none;
+  height: 5%;
+}
+
+.login {
+  border-left: solid 1px#888888;
+  height: 100%;
 }
 
 .current-nav-user-two:hover,
@@ -186,8 +144,6 @@ span {
   list-style: none;
   height: 60px;
   width: 100%;
-  
-  
 }
 
 .logout-text {
@@ -205,7 +161,6 @@ span {
   list-style: none;
   position: relative;
   right: 2rem;
-  
 }
 
 .logout-flex :hover {
@@ -216,6 +171,4 @@ span {
   margin-right: 1rem;
   position: relative;
   padding-left: 1rem;
-  
-  
 }
